# fast-agent

./: .gitignore  AGENTS.md  pyproject.toml
examples/mcp/mcp-ui/: QUICKSTART.md  README.md  fastagent.config.yaml  mock_ui_server.py  pyproject.toml  simple_ui_agent.py
examples/setup/: fastagent.config.yaml
examples/workflows-md/hf-api-agent/: fastagent.config.yaml
publish/hf-inference-acp/: README.md
resources/shared/: smart_prompt.md
src/fast_agent/: config.py  constants.py  interfaces.py  mcp_server_registry.py  tool_activity_presentation.py
src/fast_agent/acp/: acp_context.py  content_conversion.py  filesystem_runtime.py  slash_commands.py  terminal_runtime.py
src/fast_agent/agents/: agent_types.py  llm_agent.py  llm_decorator.py  mcp_agent.py  smart_agent.py  tool_agent.py  tool_runner.py
src/fast_agent/cli/: constants.py  main.py  shared_options.py
src/fast_agent/commands/: command_catalog.py  command_discovery.py  model_capabilities.py  model_details.py  status_summaries.py  tool_summaries.py
src/fast_agent/core/: agent_app.py  agent_card_loader.py  agent_card_rules.py  direct_factory.py  fastagent.py  instruction_utils.py
src/fast_agent/history/: tool_activities.py
src/fast_agent/hooks/: hook_messages.py  session_history.py
src/fast_agent/llm/: fastagent_llm.py  hf_inference_lookup.py  llamacpp_discovery.py  model_database.py  model_factory.py  model_overlays.py  model_selection.py  reasoning_effort.py  request_params.py  resolved_model.py  structured_schema.py  usage_tracking.py
tests/support/: command_surface.py
(+167 files in other folders)
