# MCP-UI Example Dependencies
#
# This file lists the dependencies needed to run the MCP-UI examples.
# Install with: uv pip install -e .

[project]
name = "fast-agent-mcp-ui-example"
version = "0.1.0"
description = "MCP-UI integration examples for fast-agent"
requires-python = ">=3.10"

dependencies = [
    "fast-agent-mcp>=0.3.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
